--- a/blog-app-fe/src/App.css
+++ b/blog-app-fe/src/App.css
@@ -2,7 +2,10 @@
   padding: 0;
   margin: 0;
 }
-
+.homeImg{
+  aspect-ratio: 1/1;
+  width: 600px;
+}
 img{
   max-width: 100%;
 }
@@ -38,7 +41,12 @@ img{
 .blog-details-container{
   padding: 20px
 }
-
+.b-cat{
+  padding:6px 10px;
+  color: white;
+  border-radius: 10px;
+  background-color: #242424;
+}
 .categories-container{
   margin-top: 100px;
   text-align: center;
@@ -56,7 +64,7 @@ img{
 }
 
 .category{
-  max-width: 20%;
+  min-width: 20%;
   margin-inline: auto;
   cursor: pointer;
 }
