--- a/blog-app-fe/src/App.css
+++ b/blog-app-fe/src/App.css
@@ -85,3 +85,11 @@ img{
 .blog-details-page{
   margin-top: 40px;
 }
+
+.author-detail{
+  position: fixed;
+  top: 20%;
+  right: 14%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 20px;
+}
